--- a/TicTacToe/wwwroot/css/site.css
+++ b/TicTacToe/wwwroot/css/site.css
@@ -12,26 +12,19 @@ body {
     padding-right: 15px;
 }
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
+/*# for id*/
+#grid{ 
+    display: grid;
+    grid-template-columns: 100px 100px 100px;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
+/* . for classes*/
+.square{
+    border: 1px solid black;
+    width: 100px;
+    height: 100px;
+    font-size: 90px;
+    text-align: center;
 }
 
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
-    }
-}
