server tic tac toe

--- a/TicTacToe/wwwroot/css/site.css
+++ b/TicTacToe/wwwroot/css/site.css
@@ -12,7 +12,8 @@ body {
     padding-right: 15px;
 }
 
-/*# for id*/
+
+/* # for id*/
 #grid{ 
     display: grid;
     grid-template-columns: 100px 100px 100px;
@@ -22,6 +23,40 @@ body {
 /* . for classes*/
 .square{
     border: 1px solid black;
+    width: 100px;
+    height: 100px;
+    font-size: 90px;
+    text-align: center;
+}
+    
+.board{
+    display: flex;
+    flex-direction: column;
+}
+
+.board{
+    display: inline;
+    width: 302px;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+}
+
+
+
+.board > .row:nth-child(2){
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.board > .row > .cell:nth-child(2){
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+}
+
+.cell{
     width: 100px;
     height: 100px;
     font-size: 90px;
