--- a/TicTacToe/Pages/Index.cshtml
+++ b/TicTacToe/Pages/Index.cshtml
@@ -8,4 +8,6 @@
 
 <a asp-page="/TicTacToe">Play Tic-Tac-Toe</a>
 <br /> 
-<a asp-page="ServerTicTacToe">Play Tic-Tac-Toe Server Style</a>
+<a asp-page="/ServerTicTacToe">Play Tic-Tac-Toe Server Style</a>
+<br />
+<a asp-page="/Checkers">Play Checkers</a>
